Fix collapsed comment form icon

--- a/app/styles/_components/VideoDebate/comments/comment.sass
+++ b/app/styles/_components/VideoDebate/comments/comment.sass
@@ -33,8 +33,8 @@
       color: darken(transparentize($vote-down-color, 0.45), 20)
     .score
       text-align: center
-      font-size: 1em
-      height: 1.2em
+      font-size: 0.9em
+      height: 1.1em
       .round-spinner
         animation: spinAround 400ms infinite linear, fadeIn 500ms
         margin-left: 3px
