--- a/app/styles/_components/VideoDebate/comments/comment_form.sass
+++ b/app/styles/_components/VideoDebate/comments/comment_form.sass
@@ -37,5 +37,5 @@
         @include animate(flipInX, 0.3s)
 
 .comment-form.collapsed
-  padding: 0.75em
+  padding: 0.4em
   text-align: center
